# play-with-workflows

./: main.py  pyproject.toml
bris_workflow/: action.py  execute.py  payload.py
bris_workflow/payload/: bris.py  graph.py  ifs.py  orography.py  reproject.py  state.py
